Fixed scrollbar color in dark theme

--- a/bibisco/app/css/bibisco-classic-theme.css
+++ b/bibisco/app/css/bibisco-classic-theme.css
@@ -1,3 +1,10 @@
-.h5, h5 {
-    font-weight: 600;
+::-webkit-scrollbar-thumb {
+    height: 6px;
+    border: 4px solid rgba(0, 0, 0, 0);
+	background-clip: padding-box;
+	border-radius: 7px;
+    -webkit-border-radius: 7px;
+	background-color: rgba(0, 0, 0, 0.15);
+	box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
 }
