--- a/bibisco/app/css/bibisco-dark-theme.css
+++ b/bibisco/app/css/bibisco-dark-theme.css
@@ -75,3 +75,14 @@ table, .table {
     background-color: #333;
     opacity: 1;
 }
+
+::-webkit-scrollbar-thumb {
+    height: 6px;
+   border: 4px solid rgba(255, 255, 255, 0);
+	background-clip: padding-box;
+	border-radius: 7px;
+    -webkit-border-radius: 7px;
+	background-color: rgba(255, 255, 255, 0.45);
+	box-shadow: inset -1px -1px 0px rgba(255, 255, 255, 0.35), inset 1px 1px 0px rgba(255, 255, 255, 0.35);
+    -webkit-box-shadow: inset -1px -1px 0px rgba(255, 255, 255, 0.35), inset 1px 1px 0px rgba(255, 255, 255, 0.35);
+}
