--- a/bibisco/app/css/bibisco.css
+++ b/bibisco/app/css/bibisco.css
@@ -44,6 +44,10 @@ body {
 	overflow: hidden;
 }
 
+.h5, h5 {
+    font-weight: 600;
+}
+
 /* DISABLE SELECTION ON TEXT */
 .bibiscoNotSelectableText, .bibiscoSuggestions, .bibiscoTip, h1, h2, h3, h4, h5,
 h6, label, th, td, p {
@@ -65,16 +69,6 @@ h6, label, th, td, p {
 ::-webkit-scrollbar {
     width: 14px;
     height: 18px;
-}
-::-webkit-scrollbar-thumb {
-    height: 6px;
-    border: 4px solid rgba(0, 0, 0, 0);
-	background-clip: padding-box;
-	border-radius: 7px;
-    -webkit-border-radius: 7px;
-	background-color: rgba(0, 0, 0, 0.15);
-	box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
-    -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
 }
 ::-webkit-scrollbar-button {
     width: 0;
